# ncursesxx

./: CMakeLists.txt  Doxyfile  README.md
include/: ncursesxx.hpp
includes/: data.hpp  enums.hpp  iocurse.hpp  macros.hpp  manipcurse.hpp  ncursesxx.hpp
src/: CMakeLists.txt  data.hpp  iocurse.hpp  macros.hpp  manipcurse.hpp  ncursesxx.cpp
test/: test.cpp
